--- a/styles.css
+++ b/styles.css
@@ -33,3 +33,13 @@ body {
     height: 50px;
     background-color: black;
 }
+
+@keyframes jump {
+    0% { bottom: 0; }
+    50% { bottom: 150px; }
+    100% { bottom: 0; }
+}
+
+.jump {
+    animation: jump 0.3s linear;
+}
