--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #f0f0f0;
+    background-color: #87CEEB;
+    overflow: hidden;
 }
 
 #gameContainer {
@@ -14,6 +15,17 @@ body {
     background-color: #fff;
     overflow: hidden;
     border: 2px solid #000;
+    background-image: linear-gradient(0deg, #ffecd2 0%, #fcb69f 100%);
+    animation: moveBg 5s linear infinite;
+}
+
+@keyframes moveBg {
+    from {
+        background-position: 0 0;
+    }
+    to {
+        background-position: -800px 0;
+    }
 }
 
 #player {
@@ -23,16 +35,14 @@ body {
     width: 50px;
     height: 50px;
     background-color: blue;
+    border-radius: 50%;
 }
 
 #obstacle {
     position: absolute;
     bottom: 0;
-    right: 0;
-    width: 50px;
-    height: 50px;
-    background-color: black;
-}
+    right:
+
 
 @keyframes jump {
     0% { bottom: 0; }
