--- a/style.css
+++ b/style.css
@@ -41,8 +41,12 @@ body {
 #obstacle {
     position: absolute;
     bottom: 0;
-    right:
-
+    right: 0;
+    width: 50px;
+    height: 50px;
+    background-color: red;
+    border-radius: 10%;
+}
 
 @keyframes jump {
     0% { bottom: 0; }
@@ -53,6 +57,7 @@ body {
 .jump {
     animation: jump 0.3s linear;
 }
+
 #backgroundElements {
     position: absolute;
     width: 100%;
