--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #87CEEB;
+    background-color: #121212;
     overflow: hidden;
 }
 
@@ -15,7 +15,7 @@ body {
     background-color: #fff;
     overflow: hidden;
     border: 2px solid #000;
-    background-image: linear-gradient(0deg, #ffecd2 0%, #fcb69f 100%);
+    background-image: linear-gradient(0deg, #FF8C1A 0%, #121212 100%);
     animation: moveBg 5s linear infinite;
 }
 
