--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
     left: 50px;
     width: 50px;
     height: 50px;
-    background-color: blue;
+    background-color: #D35400;
     border-radius: 50%;
 }
 
