--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
     left: 50px;
     width: 50px;
     height: 50px;
-    background-color: #D35400;
+    background-color: #FFFFFF;
     border-radius: 50%;
 }
 
@@ -44,7 +44,7 @@ body {
     right: 0;
     width: 50px;
     height: 50px;
-    background-color: red;
+    background-color: #121212;
     border-radius: 10%;
 }
 
