--- a/style.css
+++ b/style.css
@@ -22,9 +22,10 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    object-fit: cover; /* Ensures the video covers the entire container */
-    z-index: 0; /* Ensure the video is behind the game elements */
+    object-fit: cover; /* This will cover the entire container */
+    z-index: 0; /* Make sure the video is behind other elements */
 }
+
 
 
 @keyframes moveBg {
