--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body {
     right: 0;
     width: 50px;
     height: 50px;
-    background-color: #121212;
+    background-color: #FFFFFF;
     border-radius: 10%;
 }
 
