--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ body {
     left: 50px;
     width: 50px;
     height: 50px;
-    background-color: #FFFFFF;
+    background-color: #121212;
     border-radius: 50%;
 }
 
@@ -53,7 +53,7 @@ body {
     right: 0;
     width: 50px;
     height: 50px;
-    background-color: #FFFFFF;
+    background-color: #121212;
     border-radius: 10%;
 }
 
